[package]
name = "cherry"
version = "0.1.0"
authors = ["Lily Chung <lkdc@mit.edu>"]
edition = "2018"

[dependencies]
actix-rt = "1.1.0"
actix-web = { version = "2.0.0", features = ["rustls"] }
async-trait = "0.1.30"
barrel = { version = "0.6.5", features = ["sqlite3"], optional = true }
base64 = "0.12.0"
chrono = { version = "0.4.11", features = ["serde"] }
clap = "2.33.0"
dotenv = "0.15.0"
env_logger = "0.7.1"
futures = "0.3.4"
jsonwebtoken = "7.1.0"
log = "0.4.8"
once_cell = "1.3.1"
quaint = { version = "0.1.13", features = ["full-sqlite"] }
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
thiserror = "1.0.15"
tokio = { version = "0.2.19", features = ["sync"] }

[features]
migration = ["barrel"]
